fix: ensure body content is visible during print

--- a/app/javascript/css/print.scss
+++ b/app/javascript/css/print.scss
@@ -16,7 +16,7 @@
     background: none !important;
   }
   body * {
-    visibility: hidden;
+    visibility: visible;
   }
   #printSection,
   #printSection * {
